--- a/docs/guides/qiskit-code-assistant-local.mdx
+++ b/docs/guides/qiskit-code-assistant-local.mdx
@@ -55,7 +55,7 @@ To download the `granite-8b-qiskit` GGUF model using the Hugging Face CLI follow
 
 ## Get the Qiskit Code Assistant model up and running
 
-There are multiple ways to deploy and interact with the downloaded Qiskit Code Assistant GGUF model. These instructions outline how to get up and running on your local machine using [Ollama](https://ollama.com).
+There are multiple ways to deploy and interact with the downloaded `granite-8b-qiskit` GGUF model. These instructions outline how to get up and running on your local machine using [Ollama](https://ollama.com).
 
 - [Using the Ollama application](#using-the-ollama-application)
 - [Using the `llama-cpp-python` package](#using-the-llama-cpp-python-package)
