--- a/docs/guides/qiskit-code-assistant-local.mdx
+++ b/docs/guides/qiskit-code-assistant-local.mdx
@@ -75,7 +75,7 @@ The Ollama application provides a simple solution to run the GGUF models locally
 1. Try Ollama in your terminal and start running models e.g.,
 
     ```
-    ollama run llama
+    ollama run granite3-dense:8b
     ```
 
 #### Set up Ollama with the Qiskit Code Assistant GGUF model
