--- a/docs/guides/qiskit-code-assistant-local.mdx
+++ b/docs/guides/qiskit-code-assistant-local.mdx
@@ -122,7 +122,7 @@ The Ollama application provides a simple solution to run the GGUF models locally
 1. Run the following command to create a custom model instance based on the `Modelfile`
 
     ```
-    ollama create qiskit-granite-local -f ./path-to-model-file
+    ollama create granite-8b-qiskit -f ./path-to-model-file
     ```
 
     <Admonition type="note">This process may take some time, Ollama will read the model file, initialize the model instance and configure it according to the specifications provided.</Admonition>
