--- a/docs/guides/qiskit-code-assistant-local.mdx
+++ b/docs/guides/qiskit-code-assistant-local.mdx
@@ -130,7 +130,7 @@ The Ollama application provides a simple solution to run the GGUF models locally
 
 #### Run the Qiskit Code Assistant model in Ollama
 
-After the Qiskit Code Assistant GGUF model has been set up in Ollama, run the following command to launch the model and interact with it in the terminal (in chat mode)
+After the `granite-8b-qiskit` GGUF model has been set up in Ollama, run the following command to launch the model and interact with it in the terminal (in chat mode)
 
 ```
 ollama run qiskit-granite-local
