--- a/docs/guides/qiskit-code-assistant-local.mdx
+++ b/docs/guides/qiskit-code-assistant-local.mdx
@@ -139,7 +139,7 @@ ollama run granite-8b-qiskit
 Some useful commands:
 
 - `ollama list` - List models on your computer
-- `ollama rm qiskit-granite-local` - Remove/delete the model
+- `ollama rm granite-8b-qiskit` - Remove/delete the model
 - `ollama show granite-8b-qiskit` - Show model information
 - `ollama stop qiskit-granite-local` - Stop a model which is currently running
 - `ollama ps` - List which models are currently loaded
