--- a/docs/guides/qiskit-code-assistant-local.mdx
+++ b/docs/guides/qiskit-code-assistant-local.mdx
@@ -201,4 +201,4 @@ Using the Qiskit Code Assistant JupyterLab extension allows you to interact with
 1. Install the [Qiskit Code Assistant JupyterLab extension](/guides/qiskit-code-assistant-jupyterlab)
 1. In JupyterLab, go to the **Settings Editor** and set the **Qiskit Code Assistant Service API** to the URL of your local Ollama deployment (i.e., http://localhost:11434)
 
-The `qiskit-granite-local` configured in Ollama should appear in the status bar and ready to use.
+The `granite-8b-qiskit` configured in Ollama should appear in the status bar and ready to use.
