Make save-jobs notebook resilient to no successful jobs

--- a/docs/guides/save-jobs.ipynb
+++ b/docs/guides/save-jobs.ipynb
@@ -121,10 +121,14 @@
    ],
    "source": [
     "# Get ID of most recent successful job for demonstration.\n",
-    "# This will not work if you've never successfully run a job.\n",
-    "successful_job = next(j for j in service.jobs() if j.status().name == \"DONE\")\n",
-    "job_id = successful_job.job_id()\n",
-    "print(job_id)"
+    "successful_job = next(\n",
+    "    (j for j in service.jobs() if j.status().name == \"DONE\"), None\n",
+    ")\n",
+    "if successful_job is None:\n",
+    "    print(\"No successful jobs run yet!\")\n",
+    "else:\n",
+    "    job_id = successful_job.job_id()\n",
+    "    print(job_id)"
    ]
   },
   {
