--- a/docs/guides/algorithmiq-tem.ipynb
+++ b/docs/guides/algorithmiq-tem.ipynb
@@ -245,7 +245,7 @@
     "\n",
     "<Admonition type=\"caution\">TEM currently has the following limitations:\n",
     "\n",
-    "    - Parametrized circuits are not supported. The parameters argument should be set to None if precision is specified.\n",
+    "    - Parametrized circuits are not supported. The parameters argument should be set to `None` if precision is specified.\n",
     "    - Only circuits with linear connectivity are supported. This restriction will be removed in future versions.\n",
     "    - Non-unitary gates, such as reset, measure, and all forms of control flow are not supported. Support for reset will be added in upcoming releases.\n",
     "</Admonition>"
