Tweaks and fixes for new addons (#2270)
* Fix GitHub source code links to use stable branch
* Fix SQD 0.7 historical docs having bad metadata they're latest
(https://github.com/Qiskit/documentation/issues/2269)
* Add acronyms to the project names, which impacts the left ToC sidebar
* Hide the release notes for mpf because it's empty. The page still
exists, only isn't in the

--- a/docs/api/qiskit-addon-sqd/0.7/configuration-recovery.mdx
+++ b/docs/api/qiskit-addon-sqd/0.7/configuration-recovery.mdx
@@ -1,6 +1,6 @@
 ---
-title: configuration_recovery (latest version)
-description: API reference for qiskit_addon_sqd.configuration_recovery in the latest version of qiskit-addon-sqd
+title: configuration_recovery (v0.7)
+description: API reference for qiskit_addon_sqd.configuration_recovery in qiskit-addon-sqd v0.7
 in_page_toc_min_heading_level: 2
 python_api_type: module
 python_api_name: qiskit_addon_sqd.configuration_recovery
@@ -18,7 +18,7 @@ Functions for performing self-consistent configuration recovery.
 
 ### post\_select\_by\_hamming\_weight
 
-<Function id="qiskit_addon_sqd.configuration_recovery.post_select_by_hamming_weight" github="https://github.com/Qiskit/qiskit-addon-sqd/tree/main/qiskit_addon_sqd/configuration_recovery.py#L24-L48" signature="post_select_by_hamming_weight(bitstring_matrix, *, hamming_right, hamming_left)">
+<Function id="qiskit_addon_sqd.configuration_recovery.post_select_by_hamming_weight" github="https://github.com/Qiskit/qiskit-addon-sqd/tree/stable/0.7/qiskit_addon_sqd/configuration_recovery.py#L24-L48" signature="post_select_by_hamming_weight(bitstring_matrix, *, hamming_right, hamming_left)">
   Post-select bitstrings based on the hamming weight of each half.
 
   **Parameters**
@@ -38,7 +38,7 @@ Functions for performing self-consistent configuration recovery.
 
 ### recover\_configurations
 
-<Function id="qiskit_addon_sqd.configuration_recovery.recover_configurations" github="https://github.com/Qiskit/qiskit-addon-sqd/tree/main/qiskit_addon_sqd/configuration_recovery.py#L51-L115" signature="recover_configurations(bitstring_matrix, probabilities, avg_occupancies, num_elec_a, num_elec_b, rand_seed=None)">
+<Function id="qiskit_addon_sqd.configuration_recovery.recover_configurations" github="https://github.com/Qiskit/qiskit-addon-sqd/tree/stable/0.7/qiskit_addon_sqd/configuration_recovery.py#L51-L115" signature="recover_configurations(bitstring_matrix, probabilities, avg_occupancies, num_elec_a, num_elec_b, rand_seed=None)">
   Refine bitstrings based on average orbital occupancy and a target hamming weight.
 
   This function refines each bit in isolation in an attempt to transform the Hilbert space represented by the input `bitstring_matrix` into a space closer to that which supports the ground state.
