--- a/docs/api/qiskit-addon-sqd/0.7/qubit.mdx
+++ b/docs/api/qiskit-addon-sqd/0.7/qubit.mdx
@@ -1,6 +1,6 @@
 ---
-title: qubit (latest version)
-description: API reference for qiskit_addon_sqd.qubit in the latest version of qiskit-addon-sqd
+title: qubit (v0.7)
+description: API reference for qiskit_addon_sqd.qubit in qiskit-addon-sqd v0.7
 in_page_toc_min_heading_level: 2
 python_api_type: module
 python_api_name: qiskit_addon_sqd.qubit
@@ -18,7 +18,7 @@ Functions for handling quantum samples.
 
 ### solve\_qubit
 
-<Function id="qiskit_addon_sqd.qubit.solve_qubit" github="https://github.com/Qiskit/qiskit-addon-sqd/tree/main/qiskit_addon_sqd/qubit.py#L29-L74" signature="solve_qubit(bitstring_matrix, hamiltonian, *, verbose=False, **scipy_kwargs)">
+<Function id="qiskit_addon_sqd.qubit.solve_qubit" github="https://github.com/Qiskit/qiskit-addon-sqd/tree/stable/0.7/qiskit_addon_sqd/qubit.py#L29-L74" signature="solve_qubit(bitstring_matrix, hamiltonian, *, verbose=False, **scipy_kwargs)">
   Find the energies and eigenstates of a Hamiltonian projected into a subspace.
 
   The subspace is defined by a collection of computational basis states which are specified by the bitstrings (rows) in the `bitstring_matrix`.
@@ -53,7 +53,7 @@ Functions for handling quantum samples.
 
 ### project\_operator\_to\_subspace
 
-<Function id="qiskit_addon_sqd.qubit.project_operator_to_subspace" github="https://github.com/Qiskit/qiskit-addon-sqd/tree/main/qiskit_addon_sqd/qubit.py#L77-L143" signature="project_operator_to_subspace(bitstring_matrix, hamiltonian, *, verbose=False)">
+<Function id="qiskit_addon_sqd.qubit.project_operator_to_subspace" github="https://github.com/Qiskit/qiskit-addon-sqd/tree/stable/0.7/qiskit_addon_sqd/qubit.py#L77-L143" signature="project_operator_to_subspace(bitstring_matrix, hamiltonian, *, verbose=False)">
   Project a Pauli operator onto a Hilbert subspace defined by the computational basis states (rows) in `bitstring_matrix`.
 
   The output sparse matrix, `A`, represents an `NxN` matrix s.t. `N` is the number of rows in `bitstring_matrix`. The rows of `A` represent the input configurations, and the columns represent the connected component associated with the configuration in the corresponding row. The non-zero elements of the matrix represent the complex amplitudes associated with the connected components.
@@ -87,7 +87,7 @@ Functions for handling quantum samples.
 
 ### sort\_and\_remove\_duplicates
 
-<Function id="qiskit_addon_sqd.qubit.sort_and_remove_duplicates" github="https://github.com/Qiskit/qiskit-addon-sqd/tree/main/qiskit_addon_sqd/qubit.py#L146-L163" signature="sort_and_remove_duplicates(bitstring_matrix)">
+<Function id="qiskit_addon_sqd.qubit.sort_and_remove_duplicates" github="https://github.com/Qiskit/qiskit-addon-sqd/tree/stable/0.7/qiskit_addon_sqd/qubit.py#L146-L163" signature="sort_and_remove_duplicates(bitstring_matrix)">
   Sort a bitstring matrix and remove duplicate entries.
 
   The lowest bitstring values will be placed in the lowest-indexed rows.
@@ -107,7 +107,7 @@ Functions for handling quantum samples.
 
 ### matrix\_elements\_from\_pauli
 
-<Function id="qiskit_addon_sqd.qubit.matrix_elements_from_pauli" github="https://github.com/Qiskit/qiskit-addon-sqd/tree/main/qiskit_addon_sqd/qubit.py#L166-L239" signature="matrix_elements_from_pauli(bitstring_matrix, pauli)">
+<Function id="qiskit_addon_sqd.qubit.matrix_elements_from_pauli" github="https://github.com/Qiskit/qiskit-addon-sqd/tree/stable/0.7/qiskit_addon_sqd/qubit.py#L166-L239" signature="matrix_elements_from_pauli(bitstring_matrix, pauli)">
   Find the sparse matrix elements of a Pauli operator in the subspace defined by the bitstrings.
 
   The sparse matrix, `A`, defined by the outputs represents an `NxN` matrix s.t. `N` is the number of rows in `bitstring_matrix`. The rows of `A` represent the input configurations, and the columns represent the connected component associated with the configuration in the corresponding row. The output arrays define the sparse matrix, `A`, as follows:
