--- a/docs/guides/runtime-options-overview.mdx
+++ b/docs/guides/runtime-options-overview.mdx
@@ -106,7 +106,7 @@ Scroll to see the full table.
 |                      | shots_per_randomization  |                         |   `auto`/ Integer no larger than `backend.max_shots`.                                      | `'auto'`                    |                      |
 |                      | strategy                 |                         | `'active'`<br />`'active-circuit'`<br />`'active-accum'`<br />`'all'`                                | `'active-accum'`            |                      |
 | experimental         |                          |                         |                           |                        |                    |
-|                      | execution_path           |                         | `<new_flag>` *([see note](#experimental-option-note))*            | None                   |                    |
+|                      | execution_path           |                         | `gen3-turbo` *([see note](#experimental-option-note))*            | None                   |                    |
   </TabItem>
 
   <TabItem value="Sampler" label="Sampler">
@@ -138,14 +138,14 @@ Scroll to see the full table.
 |                      | shots_per_randomization  |                         |   `auto`/ Integer no larger than `backend.max_shots`.                                        | `'auto'`                    |                    |
 |                      | strategy                 |                         | `'active'`<br />`'active-circuit'`<br />`'active-accum'`<br />`'all'`                        | `'active-accum'`            |                    |
 | experimental         |                          |                         |                           |                        |                    |
-|                      | execution_path           |                         | `<new_flag>` *([see note](#experimental-option-note))*               | None                   |                    |
+|                      | execution_path           |                         | `gen3-turbo` *([see note](#experimental-option-note))*               | None                   |                    |
 
   </TabItem>
 </Tabs>
 
 <span id="experimental-option-note"></span>
 <Admonition type="note">
-Setting `<new flag>` enables the next-generation execution path. This is experimental and is only available on `ibm_torino`.
+Setting `gen3-turbo` enables the next-generation execution path. This is experimental and is only available on `ibm_torino`.
 </Admonition>
 <span id="options-compatibility-table"></span>
 ### Options compatibility
@@ -209,7 +209,7 @@ Due to differences in the device compilation process, certain runtime features c
   - Can be used with pulse gates, but it does not work with non-Clifford entanglers.
 
   </TabItem>
-  <TabItem value="PLACEHOLDER" label="Experimental option NEEDS NAME">
+  <TabItem value="gen3-turbo" label="gen3-turbo">
   Incompatible with:
   - Dynamic circuits
   - `meas_type=kerneled` or `meas_type=avg_kerneled`
