--- a/docs/guides/qiskit-code-assistant-local.mdx
+++ b/docs/guides/qiskit-code-assistant-local.mdx
@@ -37,8 +37,8 @@ Follow these steps to download the Qiskit Code Assistant GGUF model from the Hug
 
 To download the `granite-8b-qiskit` GGUF model using the Hugging Face CLI, follow these steps:
 
-1. Install the Hugging Face CLI: https://huggingface.co/docs/huggingface_hub/main/en/guides/cli
-1. Login to your Hugging Face account
+1. Install the [Hugging Face CLI](https://huggingface.co/docs/huggingface_hub/main/en/guides/cli)
+1. Log in to your Hugging Face account
 
     ```
     huggingface-cli login
