--- a/docs/guides/qiskit-code-assistant-local.mdx
+++ b/docs/guides/qiskit-code-assistant-local.mdx
@@ -53,7 +53,7 @@ To download the `granite-8b-qiskit` GGUF model using the Hugging Face CLI, follo
 </details>
 
 
-## Get the Qiskit Code Assistant model up and running
+## Use the Qiskit Code Assistant model
 
 There are multiple ways to deploy and interact with the downloaded `granite-8b-qiskit` GGUF model. These instructions outline how to get up and running on your local machine using [Ollama](https://ollama.com).
 
