--- a/docs/guides/qiskit-code-assistant-local.mdx
+++ b/docs/guides/qiskit-code-assistant-local.mdx
@@ -70,7 +70,7 @@ The Ollama application provides a simple solution to run the GGUF models locally
 1. Install the downloaded file
 1. Launch the installed Ollama application
 
-    <Admonition type="info">Once running, you will see the Ollama icon in the desktop menu bar, indicating that the application is running successfully. You can also verify the service is running by going to http://localhost:11434/.</Admonition>
+    <Admonition type="info">The application is running successfully when the Ollama icon appears in the desktop menu bar. You can also verify the service is running by going to http://localhost:11434/.</Admonition>
 
 1. Try Ollama in your terminal and start running models e.g.,
 
