--- a/docs/guides/qiskit-code-assistant-local.mdx
+++ b/docs/guides/qiskit-code-assistant-local.mdx
@@ -72,7 +72,7 @@ The Ollama application provides a simple solution to run the GGUF models locally
 
     <Admonition type="info">The application is running successfully when the Ollama icon appears in the desktop menu bar. You can also verify the service is running by going to http://localhost:11434/.</Admonition>
 
-1. Try Ollama in your terminal and start running models e.g.,
+1. Try Ollama in your terminal and start running models. For example:
 
     ```
     ollama run granite3-dense:8b
