--- a/docs/guides/qiskit-code-assistant-local.mdx
+++ b/docs/guides/qiskit-code-assistant-local.mdx
@@ -125,7 +125,7 @@ The Ollama application provides a simple solution to run the GGUF models locally
     ollama create granite-8b-qiskit -f ./path-to-model-file
     ```
 
-    <Admonition type="note">This process may take some time, Ollama will read the model file, initialize the model instance and configure it according to the specifications provided.</Admonition>
+    <Admonition type="note">This process may take some time for Ollama to read the model file, initialize the model instance, and configure it according to the specifications provided.</Admonition>
 
 
 #### Run the Qiskit Code Assistant model in Ollama
