--- a/docs/guides/optimize-for-hardware.mdx
+++ b/docs/guides/optimize-for-hardware.mdx
@@ -60,3 +60,7 @@ can be run on IBM&reg; hardware using IBM Qiskit Runtime.
 - [Algorithmiq Tensor-network error mitigation](/guides/algorithmiq-tem)
 - [Q-CTRL Performance Management](/guides/q-ctrl-performance-management)
 - [QEDMA QESEM](/guides/qedma-qesem)
+
+### Qiskit addons
+- [Approximate Quantum Compilation with Tensor Networks (AQC-Tensor)](./qiskit-addons-aqc)
+  - [Getting started with AQC-Tensor](./qiskit-addons-aqc-get-started)
