--- a/docs/guides/ai-transpiler-passes.mdx
+++ b/docs/guides/ai-transpiler-passes.mdx
@@ -23,7 +23,7 @@ The following passes are currently available:
  - `AILinearFunctionSynthesis`: Linear function circuit synthesis
  - `AIPermutationSynthesis`: Permutation circuit synthesis
 
-To use the AI transpiler passes, install the `qiskit-ibm-transpiler` package (see instructions [here](./qiskit-transpiler-service#install-transpiler-service)).
+To use the AI transpiler passes, first [install the `qiskit-ibm-transpiler` package.](./qiskit-transpiler-service#install-transpiler-service))
 
 ## Running the AI transpiler passes on local or cloud
 
