--- a/docs/guides/ai-transpiler-passes.mdx
+++ b/docs/guides/ai-transpiler-passes.mdx
@@ -25,7 +25,7 @@ The following passes are currently available:
 
 To use the AI transpiler passes, first [install the `qiskit-ibm-transpiler` package.](./qiskit-transpiler-service#install-transpiler-service))
 
-## Running the AI transpiler passes on local or cloud
+## Run the AI transpiler passes locally or on cloud
 
 If you want to use the AI-powered transpiler passes in your local environment for free you will need install the `qiskit-ibm-transpiler` with some extra dendencies as follows:
 
