--- a/docs/guides/ai-transpiler-passes.mdx
+++ b/docs/guides/ai-transpiler-passes.mdx
@@ -114,7 +114,7 @@ These custom collection passes limit the sizes of the collected sub-circuits so 
 
 ## Hybrid Qiskit-AI circuit transpilation
 
-The `qiskit-ibm-transpiler` offers the option to configure an hybrid pass manager combining best of Qiskit and the AI-powered transpiler passes, so you can run a whole transpilation on your own. This featres behaves similarly to the Qiskit `generate_pass_manager` method. A typical way to use this `generate_ai_pass_manager` is as follows:
+The `qiskit-ibm-transpiler` offers the option to configure a hybrid pass manager that combines the best of Qiskit and the AI-powered transpiler passes, so you can run a whole transpilation on your own. This feature behaves similarly to the Qiskit `generate_pass_manager` method. A typical way to use `generate_ai_pass_manager` is as follows:
 
 ```python
     from qiskit_ibm_transpiler.ai import generate_ai_pass_manager
