--- a/docs/guides/qiskit-addons-aqc-get-started.ipynb
+++ b/docs/guides/qiskit-addons-aqc-get-started.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Getting started with Approximate quantum compilation with tensor networks (AQC-Tensor)\n",
     "\n",
-    "In this page demonstrates a simple working example to get started with AQC-Tensor. In this example, you will take a Trotter circuit which simulates the evolution of a transverse field Ising model and use the AQC method to reduce the resulting circuit depth. In addition, this example requires the `qiskit-addon-utils` package for the problem generator as well as `qiskit-aer` for the tensor-network simulation.\n",
+    "In this page demonstrates a simple working example to get started with AQC-Tensor. In this example, you will take a Trotter circuit which simulates the evolution of a transverse field Ising model and use the AQC method to reduce the resulting circuit depth. In addition, this example requires the `qiskit-addon-utils` package for the problem generator, `qiskit-aer` for the tensor-network simulation, and `scipy` for the parameter optimization.\n",
     "\n",
     "To begin, recall that the Hamiltonian of the transverse field Ising model has the form\n",
     "\n",
