--- a/docs/guides/qiskit-addons-aqc-get-started.ipynb
+++ b/docs/guides/qiskit-addons-aqc-get-started.ipynb
@@ -338,6 +338,8 @@
   }
  ],
  "metadata": {
+  "title": "Get started with AQC-Tensor",
+  "description": "Example workflow to compress circuits using approximate quantum compilation",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
