Incorporate Jen's comments

--- a/docs/guides/serverless-hamsim-template.ipynb
+++ b/docs/guides/serverless-hamsim-template.ipynb
@@ -10,7 +10,7 @@
     "tags": []
    },
    "source": [
-    "# Write your second Qiskit Serverless program"
+    "# Build a function template for Hamiltonian simulation"
    ]
   },
   {
@@ -52,7 +52,13 @@
     "tags": []
    },
    "source": [
-    "short intro describing what a function template is. this is intended to be a starting point for user to take and modify for their own needs, or that they can use as a helpful example for building out their own templates."
+    "By now you've seen a basic example of how to get started writing, uploading, and running a program with Qiskit Serverless. The workloads you are building for your own use cases are likely not so simple. For example, you might need to carefully consider what domain-level inputs and outputs are relevant for your application, how to make sure your program can be reusable across a range of those inputs, and what kind of information you need returned to you during the execution of your job so that you can better evaluate the progress of your workload. You may even want to incorporate a dry run mode that lets you test the impact of a set of particular inputs before sending the resulting circuits to hardware.\n",
+    "\n",
+    "\n",
+    "A function template is an example of a realistic workload using a specific application domain to contextualize these aspects. It is meant to be a starting point for you to take and modify for your own needs so that you don't have to start from scratch.\n",
+    "\n",
+    "\n",
+    "Here, we will see a function template for addressing Hamiltonian simulation problems."
    ]
   },
   {
@@ -65,11 +71,11 @@
     "tags": []
    },
    "source": [
-    "## Example: AQC with Qiskit Serverless\n",
+    "## Write the function template\n",
     "\n",
-    "Going to make a hamiltonian simulation function that does AQC.  AQC is on initial portion of circuit.  FIXME.\n",
+    "We will write a function template for Hamiltonian simulation using the AQC-Tensor Qiskit addon to map the problem description to a reduced-depth circuit for execution on hardware.\n",
     "\n",
-    "We will save the following code to `./source_files/hamsim_template.py`. This file is the program we'll upload to Qiskit Serverless."
+    "We will save the following code to `./source_files/hamsim_template.py`. This file is the function template we'll upload to and run remotely with Qiskit Serverless."
    ]
   },
   {
@@ -102,7 +108,9 @@
     "tags": []
    },
    "source": [
-    "### Access and validate program arguments"
+    "### Get the domain-level inputs\n",
+    "\n",
+    "We start by getting the inputs for our template. In this case, we have domain-specific inputs relevant for Hamiltonian simulation (such as the Hamiltonian and observable) and capability-specific options (such as how much we want to compress the initial layers of our Trotter circuit using AQC-Tensor or advanced options for fine-tuning error suppression and mitigation beyond the defaults we have baked into for this example)."
    ]
   },
   {
@@ -155,36 +163,6 @@
     "hamiltonian = arguments[\"hamiltonian\"]\n",
     "observable = arguments[\"observable\"]\n",
     "initial_state = arguments.get(\"initial_state\", QuantumCircuit(hamiltonian.num_qubits))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Appending to ./source_files/hamsim_template.py\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%writefile --append ./source_files/hamsim_template.py\n",
-    "\n",
-    "# Perform parameter validation\n",
-    "\n",
-    "if not 0.0 < aqc_stopping_fidelity <= 1.0:\n",
-    "    raise ValueError(\n",
-    "        f\"Invalid stopping fidelity: {aqc_stopping_fidelity} - must be positive float no greater than 1\"\n",
-    "    )"
    ]
   },
   {
@@ -243,8 +221,48 @@
     "# Merge with user-provided options\n",
     "estimator_options = merge(\n",
     "    arguments.get(\"estimator_options\", {}), estimator_default_options\n",
-    ")\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When the function template is running, it is helpful to return information in the logs, using print statements, so that you can better evaluate the progress of your workload. Here is a simple example of printing the estimator_options so that there is a record of the actual Estimator options used. There are many more example like this throughout the program to report back progress during execution. Including the value of the objective function during the iterative component of AQC-Tensor, or the two-qubit depth of the final ISA circuit intended for execution on hardware."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "print(\"estimator_options =\", json.dumps(estimator_options, indent=4))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Validate the inputs\n",
+    "\n",
+    "An important aspect of ensuring reusability of the template across a range of inputs is to validate the inputs. Here is an example of how we check that the stopping fidelity during AQC-Tensor has been specified appropriately and, if not, return an informative error message for how to fix the error."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile --append ./source_files/hamsim_template.py\n",
+    "\n",
+    "# Perform parameter validation\n",
+    "\n",
+    "if not 0.0 < aqc_stopping_fidelity <= 1.0:\n",
+    "    raise ValueError(\n",
+    "        f\"Invalid stopping fidelity: {aqc_stopping_fidelity} - must be positive float no greater than 1\"\n",
+    "    )"
    ]
   },
   {
@@ -270,9 +288,9 @@
     "tags": []
    },
    "source": [
-    "### Perform workflow with AQC\n",
+    "### Perform the Hamiltonian simulation workflow using AQC-Tensor\n",
     "\n",
-    "First, we prepare a dictionary to hold all output of the Function.  Keys will be added to this `dict` throughout the workflow, and it will be returned at the conclusion of the program."
+    "First, we prepare a dictionary to hold all output of the function template. Keys will be added to this dict throughout the workflow, and it will be returned at the conclusion of the program."
    ]
   },
   {
@@ -312,7 +330,9 @@
    "source": [
     "#### Step 1: Map\n",
     "\n",
-    "The AQC-Tensor optimization happens in step 1 of a Qiskit pattern.  First, a target state is constructed, here from a target circuit that evolves the same hamiltonian for the same time period as the AQC portion.  Then, an ansatz is generated from an equivalent circuit but with fewer Trotter steps.  In the main portion of the AQC algorithm, that ansatz is brought closer to the target state in an iterative process.  Then, the result is combined with the remainder of the Trotter steps needed to reach the desired evolution time."
+    "The AQC-Tensor optimization happens in step 1 of a Qiskit pattern.  First, a target state is constructed, here from a target circuit that evolves the same hamiltonian for the same time period as the AQC portion.  Then, an ansatz is generated from an equivalent circuit but with fewer Trotter steps.  In the main portion of the AQC algorithm, that ansatz is brought closer to the target state in an iterative process.  Then, the result is combined with the remainder of the Trotter steps needed to reach the desired evolution time.\n",
+    "\n",
+    "Note the additional examples of logging incorporated below."
    ]
   },
   {
@@ -457,7 +477,7 @@
     "tags": []
    },
    "source": [
-    "#### Step 2\n",
+    "#### Step 2: Optimize\n",
     "\n",
     "After the AQC portion of the workflow, the `final_circuit` is transpiled to hardware as usual."
    ]
@@ -510,7 +530,9 @@
     "tags": []
    },
    "source": [
-    "#### Exit early if \"dry run\""
+    "#### Exit early if using dry run mode\n",
+    "\n",
+    "If dry run mode has been selected then the program is stopped before executing on hardware. This can be useful if, for example, you want first to inspect the two-qubit depth of the ISA circuit before deciding to execute on hardware."
    ]
   },
   {
@@ -554,7 +576,7 @@
     "tags": []
    },
    "source": [
-    "#### Execute on hardware"
+    "#### Step 3: Execute on hardware"
    ]
   },
   {
@@ -585,7 +607,8 @@
     "\n",
     "estimator = Estimator(backend, options=estimator_options)\n",
     "\n",
-    "# Submit job\n",
+    "# Submit the underlying Estimator job. Note that this is not the\n",
+    "# actual function job.\n",
     "job = estimator.run([(isa_circuit, isa_observable)])\n",
     "print(\"Job ID:\", job.job_id())\n",
     "output[\"job_id\"] = job.job_id()\n",
@@ -615,7 +638,9 @@
     "tags": []
    },
    "source": [
-    "#### Save output"
+    "#### Save the output\n",
+    "\n",
+    "This function template returns the relevant domain-level output for this Hamiltonian simulation workflow (expectaton values) in addition to important metadata generated along the way."
    ]
   },
   {
@@ -719,8 +744,8 @@
    "outputs": [],
    "source": [
     "template = QiskitFunction(\n",
-    "    title=\"hamsim_template\",\n",
-    "    entrypoint=\"hamsim_template.py\",\n",
+    "    title=\"function_template_hamsim\",\n",
+    "    entrypoint=\"function_template_hamsim.py\",\n",
     "    working_dir=\"./source_files/\",\n",
     "    dependencies=[\n",
     "        \"qiskit-addon-utils==0.1.0\",\n",
@@ -783,7 +808,7 @@
     {
      "data": {
       "text/plain": [
-       "[QiskitFunction(hamsim_template), QiskitFunction(aqc_tutorial_L50)]"
+       "[QiskitFunction(hamsim_template)]"
       ]
      },
      "execution_count": 31,
@@ -805,11 +830,9 @@
     "tags": []
    },
    "source": [
-    "## Perform a test run\n",
+    "## Run the function template remotely\n",
     "\n",
-    "Here we will perform a test run using a 4-qubit hamiltonian along with a simple observable.\n",
-    "\n",
-    "First we load the template by name:"
+    "Now that we have uploaded the function template, we can run it remotely with Qiskit Serverless. First, we load the template by name:"
    ]
   },
   {
@@ -837,7 +860,7 @@
     "tags": []
    },
    "source": [
-    "Then we run it with our desired arguments:"
+    "Then, we run the template with the domain-level inputs for Hamiltonian simulation. In this example, we specify a simple 4-qubit hamiltonian along with an observable."
    ]
   },
   {
@@ -907,7 +930,9 @@
     },
     "tags": []
    },
-   "source": []
+   "source": [
+    "We can check the status of our job:"
+   ]
   },
   {
    "cell_type": "code",
@@ -922,6 +947,13 @@
    "outputs": [],
    "source": [
     "job.status()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once the job is running, we can fetch logs created from the `print()` outputs. These can provide actionable information about the progress of our Hamiltonian simulation workflow. For example, the value of the objective function during the iterative component of AQC, or the two-qubit depth of the final ISA circuit intended for execution on hardware."
    ]
   },
   {
@@ -949,7 +981,7 @@
     "tags": []
    },
    "source": [
-    "Block until a result is available"
+    "Block until a result is available. And once the job is done, we can retrieve the results. These include the domain-level output of Hamiltonian simulation (expectation value) and useful metadata."
    ]
   },
   {
@@ -981,7 +1013,8 @@
     "\n",
     "<Admonition type=\"info\" title=\"Recommendations\">\n",
     "\n",
-    "- FIXME Learn how to pass inputs and run your program remotely in the [Run your first Qiskit Serverless workload remotely](./serverless-run-first-workload) topic.\n",
+    "- See an [example of this function template](https://qiskit.github.io/qiskit-addon-aqc-tensor/) in action on a large-scale Hamiltonian simulation problem. \n",
+    "{/* - For a deeper dive into the AQC-Tensor Qiskit addon, check out the [tutorial on the Learning Platform](add-link-when-live). */}\n",
     "\n",
     "</Admonition>"
    ]
