--- a/docs/guides/serverless-hamsim-template.ipynb
+++ b/docs/guides/serverless-hamsim-template.ipynb
@@ -1014,7 +1014,7 @@
     "<Admonition type=\"info\" title=\"Recommendations\">\n",
     "\n",
     "- See an [example of this function template](https://qiskit.github.io/qiskit-addon-aqc-tensor/) in action on a large-scale Hamiltonian simulation problem. \n",
-    "{/* - For a deeper dive into the AQC-Tensor Qiskit addon, check out the [tutorial on the Learning Platform](add-link-when-live). */}\n",
+    "{/* - For a deeper dive into the AQC-Tensor Qiskit addon, check out the tutorial on the Learning Platform (add-link-when-live). */}\n",
     "\n",
     "</Admonition>"
    ]
