Implement feedback from code review

--- a/docs/guides/optimize-for-hardware.mdx
+++ b/docs/guides/optimize-for-hardware.mdx
@@ -60,3 +60,7 @@ can be run on IBM&reg; hardware using IBM Qiskit Runtime.
 - [Algorithmiq Tensor-network error mitigation](/guides/algorithmiq-tem)
 - [Q-CTRL Performance Management](/guides/q-ctrl-performance-management)
 - [QEDMA QESEM](/guides/qedma-qesem)
+
+### Qiskit Addons
+* [Operator Backpropagation (OBP)](./qiskit-addons-obp)
+  * [Getting started with OBP](./qiskit-addons-obp-get-started)
