Fixed the type of the param passed to ai_layout_mode (is str)

--- a/docs/guides/ai-transpiler-passes.mdx
+++ b/docs/guides/ai-transpiler-passes.mdx
@@ -130,7 +130,7 @@ The `qiskit-ibm-transpiler` allows you to configure a hybrid pass manager that c
         coupling_map=fez_coupling_map,
         ai_optimization_level=3,
         optimization_level=3,
-        ai_layout_mode=optimize,
+        ai_layout_mode="optimize",
     )
 
     ai_su2_transpiled_circuit = ai_transpiler_pass_manager.run(su2_circuit),
