--- a/docs/guides/serverless-hamsim-template.ipynb
+++ b/docs/guides/serverless-hamsim-template.ipynb
@@ -245,6 +245,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%writefile --append ./source_files/function_template_hamsim.py\n",
+    "\n",
     "print(\"estimator_options =\", json.dumps(estimator_options, indent=4))"
    ]
   },
