Add tutorial link to getting started page

--- a/docs/guides/qiskit-addons-aqc-get-started.ipynb
+++ b/docs/guides/qiskit-addons-aqc-get-started.ipynb
@@ -335,6 +335,18 @@
     "final_circuit.compose(subsequent_circuit, inplace=True)\n",
     "final_circuit.draw(\"mpl\", fold=-1)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b5c547d1-2103-4716-8da2-cd2b24f1f9c1",
+   "metadata": {},
+   "source": [
+    "## Next steps\n",
+    "\n",
+    "<Admonition type=\"tip\" title=\"Recommendations\">\n",
+    "    - Read through the [AQC-Tensor tutorial](https://learning.quantum.ibm.com/tutorial/improved-trotterized-time-evolution-with-approximate-quantum-compilation)\n",
+    "</Admonition>"
+   ]
   }
  ],
  "metadata": {
