--- a/docs/guides/ai-transpiler-passes.mdx
+++ b/docs/guides/ai-transpiler-passes.mdx
@@ -25,7 +25,7 @@ The following passes are currently available:
 
 To use the AI transpiler passes, first [install the `qiskit-ibm-transpiler` package.](./qiskit-transpiler-service#install-transpiler-service). Check out the [qiskit-ibm-transpiler API documentation](https://docs.quantum.ibm.com/api/qiskit-ibm-transpiler) to get more information about the different options available.
 
-## Run the AI transpiler passes locally or on cloud
+## Run the AI transpiler passes locally or on the cloud
 
 If you want to use the AI-powered transpiler passes in your local environment for free you need install `qiskit-ibm-transpiler` with some extra dependencies as follows:
 
