Add link to new tutorial

--- a/docs/guides/serverless-hamsim-template.ipynb
+++ b/docs/guides/serverless-hamsim-template.ipynb
@@ -1032,8 +1032,7 @@
     "\n",
     "<Admonition type=\"info\" title=\"Recommendations\">\n",
     "\n",
-    "See an [example of this function template](https://qiskit.github.io/qiskit-addon-aqc-tensor/) in action on a large-scale Hamiltonian simulation problem.\n",
-    "{/* - For a deeper dive into the AQC-Tensor Qiskit addon, check out the tutorial on the Learning Platform (add-link-when-live). */}\n",
+    "For a deeper dive into the AQC-Tensor Qiskit addon, check out the [Improved Trotterized Time Evolution with Approximate Quantum Compilation](https://learning.quantum.ibm.com/tutorial/improved-trotterized-time-evolution-with-approximate-quantum-compilation) tutorial.\n",
     "\n",
     "</Admonition>"
    ]
