Set mergedeep version

--- a/docs/guides/serverless-hamsim-template.ipynb
+++ b/docs/guides/serverless-hamsim-template.ipynb
@@ -754,7 +754,7 @@
     "    dependencies=[\n",
     "        \"qiskit-addon-utils==0.1.0\",\n",
     "        \"qiskit-addon-aqc-tensor[quimb-jax]==0.1.0\",\n",
-    "        \"mergedeep\",\n",
+    "        \"mergedeep==1.3.4\",\n",
     "    ],\n",
     ")"
    ]
